# capitan-lib

./: Cargo.toml  README.md
src/: README.md  capitan.rs  lib.rs  service.rs  services.rs  stream.rs
src/encryption/: encryption.rs
src/events/: events.rs
src/macros/: mod.rs
src/reactor/: mod.rs  reactor.rs
src/services/: BEHAVIOUR.md  dynamic.rs  isolated.rs  macros.rs  mod.rs  reactor.rs  services.rs  shared.rs
src/stream/: stream.rs
src/structs/: mod.rs
