[package]
name = "capitan-lib"
version = "0.3.0"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"


license = "MIT"
documentation = "https://docs.rs/capitan-lib/"
repository = "https://github.com/znx3p0/capitan-lib"
description = """
CAPITAN | Supervisor tree library

Capitan allows you to create and configure services and supervisor trees through reactors and services.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1", features = [ "rt", "net", "io-util", "sync" ] }
